# WinToast

./: CMakeLists.txt  LICENSE  README.md
src/: wintoastlib.cpp  wintoastlib.h
